# entity-plugin-template

./: .gitignore  README.md  pyproject.toml
src/entity_plugin_template/: __init__.py  async_plugin.py  configured_plugin.py  simple_plugin.py  stateful_plugin.py
tests/: test_template_plugins.py
